# initial-commit

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/initial_commit/: cli.py
src/initial_commit/templates/: node.mk  python.mk
