[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "initial-commit"
version = "0.1.1"
description = "Kickstart your projects: git init + Makefile generation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "dallatIkes", email = "samy.chaabi1@gmail.com" }]
requires-python = ">=3.8"
dependencies = ["questionary>=2.0"]
keywords = ["cli", "git", "makefile", "scaffold", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
initial-commit = "initial_commit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["initial_commit*"]

[tool.setuptools.package-data]
initial_commit = ["templates/*.mk"]